# gh-copilot-demo

./: .gitignore  AGENTS.md  MONITORING.md  PRD.md  README.md  example_content.txt  sample-pdf-content.md  sample.txt  test-pdf.http  test.http  worker.tfvars
.github/: copilot-instructions.md
.github/agents/: README.md  deployment-specialist.agent.md  implementer.agent.md  integration-specialist.agent.md  plan-and-handoff.agent.md  planner.agent.md  researcher.agent.md  reviewer.agent.md  workshop-implementer.agent.md  workshop-orchestrator.agent.md  workshop-reviewer.agent.md
.github/chatmodes/: AgentWorkshopCoach.chatmode.md
.github/hooks/: copilot-policy.json
.github/instructions/: general.instructions.md  python.instructions.md  terraform.instructions.md
.github/prompts/: EmbeddingsSimpleProduct.prompt.md  OrganizeCommonErrors.prompt.md  OrganizeImplementationLog.prompt.md  agent-first-plan.prompt.md  agenticWorkflow.prompt.md  camelcase.prompt.md  cliHandoff.prompt.md  discuss.prompt.md  fleet-breakdown.prompt.md  governedReview.prompt.md  headerComments.prompt.md  skills-or-mcp.prompt.md  specialist-handoff.prompt.md  workshopPlan.prompt.md
.github/skills/: README.md
.github/skills/json-to-xml-converter/scripts/: README.md  json2xml.py  pyproject.toml
.github/workflows/: api-processing-BUILD.yml  api-status-BUILD.yml  demo-agentic-pr-review.yml  demo-agentic-release-readiness.yml  deploy.yml  devskim.yml  frontend-BUILD.yml  ossar.yml  perftest-BUILD.yml  pysa.yml  scorecard.yml  sonarcloud.yml  tfsec.yml  worker-BUILD.yml
api-processing/: EXAMPLES.md  README.md  main.py  pyproject.toml  requirements.txt  test.http
api-processing/api_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api-processing/models/: pdf_models.py
api-processing/tests/: conftest.py
api-status/: README.md  main.py  pyproject.toml  requirements.txt
api-status/tests/: conftest.py
api-status/tests/integration/: test_status_integration.py
demo/: AGENTS.md
demo/perftest/: README.md
deploy/: AGENTS.md  MONITORING.md
deploy/local/: README.md  docker-compose.yml
deploy/terraform/: container_app.api-processing.tf  container_app.api-status.tf
docs/: ImplementationLog.md  PrometheusGrafana.md  agent-hq-and-orchestration.md  agentic-delivery.md  basics.md  context-and-specs.md  copilot_workshop_agenda_CZ.md  copilot_workshop_agenda_EN.md  enterprise_demo_flow.md  governed-delivery.md  monitoring.md  skills-and-mcp.md
docs/workshop/: 00-course-map.md  01-repository-context.md  02-skills-and-mcp.md  03-vscode-agents.md  04-copilot-cli.md  05-token-efficiency.md  06-governance-review-security-hooks.md  07-workflow-agents.md  08-operations.md  09-optional-demos.md  README.md
examples/agents/: 01-cli-orchestration-and-handoff.md  02-mcp-and-approval-aware-workflow.md  03-long-running-agent-pattern.md  README.md  parallel-work-items.json
examples/gh-aw/: README.md  daily-maintainer-report.md  governance-after-pr.md
examples/json/: myjson.json  myjson.xml
examples/kql/: query_data.csv
examples/terraform/: README.md  container_app.worker.tf  container_app_job.perftest.tf  variables.tf
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
grafana-dashboards/: README.md  api-processing-dashboard.json  api-processing.json  api-status-dashboard.json  api-status.json  worker-dashboard.json  worker.json
guidelines/: architecture.md
insecure/: AGENTS.md
insecure/not-great-app/: README.md  pyproject.toml
insecure/not-great-iac/: .gitignore
mcp/: AGENTS.md  README.md
mcp/demo_infra/: README.md  aks.tf  grafana_dashboards.tf  helm.tf  monitoring.tf  outputs.tf  postgres.tf  providers.tf  rbac.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
mcp/random_string_mcp/: README.md
not-great-app/: main.py  requirements.txt
perftest/: README.md  script.js
sql/: users_denormalized.json
src/: AGENTS.md
src/api-processing/: README.md  main.py  pyproject.toml  requirements.txt
src/api-processing/tests/: conftest.py
src/api-processing/tests/unit/: test_async_operations.py  test_process_endpoint.py
src/integration-tests/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  test_toy_integration.py  test_trip_integration.py
src/services/demo-data-init/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  config.py  devspace.yaml  main.py  metrics.py  pyproject.toml
src/services/demo-data-init/models/: __init__.py  operations.py
src/services/demo-data-init/routes/: __init__.py  demo_data.py
src/services/demo-data-init/services/: __init__.py  importer.py
src/services/demo-data-init/tests/: test_routes.py
src/services/toy/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  config.py  main.py  metrics.py  pyproject.toml
src/services/toy/models/: __init__.py  toy.py
src/services/toy/repositories/: __init__.py  toy_repository.py
src/services/toy/routes/: __init__.py  toy_routes.py
src/services/toy/services/: __init__.py  blob_service.py
src/services/trip/: .env.example  Dockerfile  README.md  __init__.py  config.py  main.py  metrics.py  middleware.py  pyproject.toml
src/services/trip/models/: __init__.py  trip.py
src/services/trip/repositories/: __init__.py  trip_repository.py
src/services/trip/routes/: __init__.py  trip_routes.py
src/services/trip/services/: __init__.py  gallery_service.py
src/worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
talks/: token-saving-cz.html
terraform/: .gitignore  container_app.api-processing.tf  container_app.frontend.tf  container_app.worker.tf  container_app_env.tf  dashboards.tf  monitoring.tf  prometheus_grafana.tf  providers.tf  service_bus.tf  variables.tf
tests/: test_pdf_models.py  test_workflow.py
tools/: Disable-CopilotDemoHooks.ps1  Enable-CopilotDemoHooks.ps1
worker/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
worker/models/: pdf_models.py
worker/tests/: conftest.py  test_pdf_processing.py
worker/tests/unit/: test_worker.py
(+223 files in other folders)
