[project]
name = "api-status"
version = "0.1.0"
description = "FastAPI service to retrieve processing results from Cosmos DB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Demo" } ]
dependencies = [
  "fastapi",
  "uvicorn",
  "python-dotenv",
  "azure-identity",
  "azure-cosmos",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "azure-monitor-opentelemetry",
  "azure-core-tracing-opentelemetry",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-requests",
  "python-multipart",
  "aiohttp",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "asgi-lifespan",
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "asgi-lifespan",
]
