[project]
name = "trip-service"
version = "0.1.0"
description = "Trip & Gallery Service for Stuffed Toy World Tour"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.12",
    "azure-cosmos>=4.9.0",
    "azure-storage-blob>=12.24.0",
    "azure-identity>=1.21.0",
    "aiohttp>=3.13.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=44.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
